Fixed CSS Spacing Issues

--- a/src/style.css
+++ b/src/style.css
@@ -6,22 +6,28 @@ body {
   max-width: 600px;
   margin: 30px 0 auto;
   padding: 20px;
-  border: 1px solid #dadde1;
+  border: 2px solid #68dcd8;
   border-radius: 10px;
   background-color: #a2dcd8;
   opacity: 0.8;
-  max-height: 800px;
+  max-height: 999px;
 }
 h1 {
   color: #ffffff;
   font-size: 55px;
-  font-weight: 100;
+  font-weight: 450;
   height: 55px;
   line-height: 65px;
   text-align: center;
   margin-bottom: 0;
   font-family: Arial, Helvetica, sans-serif;
   opacity: 1;
+}
+.btn-dark {
+  border: 2px solid #68dcd8;
+}
+.form-control {
+  border: 2px solid #68dcd8;
 }
 .result-date {
   padding-top: 10px;
@@ -50,7 +56,7 @@ li:first-letter {
   margin-bottom: 20px;
 }
 .col-6 {
-  padding-top: 20px;
+  padding: 40px;
 }
 .weather-temperature img {
   margin-right: 5px;
@@ -78,7 +84,7 @@ li:first-letter {
 }
 .weather-forecast h3 {
   color: rgb(33, 33, 33);
-  font-size: 14px;
+  font-size: 15px;
   font-weight: 400;
   text-align: center;
   height: 15px;
@@ -88,14 +94,14 @@ li:first-letter {
 .weather-forecast img {
   display: block;
   margin: 0 auto;
-  height: 48px;
-  width: 48px;
+  height: 58px;
+  width: 58px;
 }
 
 .weather-forecast-temperature {
   text-align: center;
   color: rgb(33, 33, 33);
-  font-size: 13px;
+  font-size: 15px;
   font-weight: 400;
   height: auto;
   line-height: 15px;
@@ -103,5 +109,5 @@ li:first-letter {
 }
 
 .code {
-  color: #a2dcd8;
+  color: #68dcd8;
 }
